force-app/main/default/objects/Checklist_Instance__c/Checklist_Instance__c.object-meta.xml
<CustomObject>
    <label>Checklist Instance</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Checklist Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>