force-app/main/default/objects/Checklist_Instance__c/fields/Design__c.field-meta.xml
<CustomField>
    <fullName>Design__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design</label>
    <referenceTo>SymphonyLF__Design__c</referenceTo>
    <relationshipLabel>Checklist Instances</relationshipLabel>
    <relationshipName>Checklist_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>