force-app/main/default/objects/Checklist_Instance__c/fields/Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Docket_Number__c</fullName>
    <formula>if( ISBLANK(Patent__c), (if( ISBLANK(Design__c), &apos;&apos;, Design__r.SymphonyLF__Docket_Number__c)), Patent__r.SymphonyLF__Docket_Number__c  )</formula>
    <label>Docket Number</label>
    <type>Text</type>
</CustomField>