force-app/main/default/objects/Checklist_Instance__c/fields/Double_Checker__c.field-meta.xml
<CustomField>
    <fullName>Double_Checker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Double Checker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Double_Checker__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Instances2</relationshipName>
    <type>Lookup</type>
</CustomField>