force-app/main/default/objects/Checklist_Instance__c/fields/Double_Checker_Completed__c.field-meta.xml
<CustomField>
    <fullName>Double_Checker_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Checker Completed</label>
    <type>Checkbox</type>
</CustomField>