force-app/main/default/objects/Checklist_Instance__c/fields/Double_Checker_Notes__c.field-meta.xml
<CustomField>
    <fullName>Double_Checker_Notes__c</fullName>
    <label>Double Checker Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>