force-app/main/default/objects/Checklist_Instance__c/fields/Matter_Status__c.field-meta.xml
<CustomField>
    <fullName>Matter_Status__c</fullName>
    <formula>if( ISBLANK(Patent__c), (if( ISBLANK(Design__c), &apos;&apos;,  TEXT(Design__r.SymphonyLF__Design_Status__c))), TEXT(Patent__r.SymphonyLF__Patent_Status__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matter Status</label>
    <type>Text</type>
</CustomField>