force-app/main/default/objects/Checklist_Instance__c/fields/Parent_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +  Related_To_ID__c</formula>
    <label>Parent Record Link</label>
    <type>Text</type>
</CustomField>