force-app/main/default/objects/Checklist_Instance__c/fields/Patent__c.field-meta.xml
<CustomField>
    <fullName>Patent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patent</label>
    <referenceTo>SymphonyLF__Patent__c</referenceTo>
    <relationshipLabel>Checklist Instances</relationshipLabel>
    <relationshipName>Checklist_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>