force-app/main/default/objects/Checklist_Instance__c/fields/Related_To_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_To_ID__c</fullName>
    <formula>if( ISBLANK(Patent__c), (if( ISBLANK(Design__c), &apos;&apos;, Design__c)),  Patent__c)</formula>
    <label>Related To ID</label>
    <type>Text</type>
</CustomField>