force-app/main/default/objects/Checklist_Instance__c/fields/Secretary__c.field-meta.xml
<CustomField>
    <fullName>Secretary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secretary</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Legal Assistant</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Paralegal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>