force-app/main/default/objects/Checklist_Instance__c/fields/Secretary_Completed__c.field-meta.xml
<CustomField>
    <fullName>Secretary_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secretary Completed</label>
    <type>Checkbox</type>
</CustomField>