force-app/main/default/objects/Checklist_Instance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Assignment Checklist In Progress</fullName>
            </value>
            <value>
                <fullName>Attorney Checklist In Progress</fullName>
            </value>
            <value>
                <fullName>Filing Documents with PTO</fullName>
            </value>
            <value>
                <fullName>Double Checking</fullName>
            </value>
            <value>
                <fullName>Double Checker Approved</fullName>
            </value>
            <value>
                <fullName>Modification In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>